--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hello World
+            <h4>Index File</h4>
         </div>
+ 	 <p>This is the index of my first webapp</p>  
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
