--- a/ui/article2.html
+++ b/ui/article2.html
@@ -1,2 +1,23 @@
 <html>
+  <head>
+	<title>
+		Article Two
+	</title>
+  </head>
+  <body>
+	<div>
+		<a href="/">Home</a>
+	</div>
+	<hr/>
+  <h3>Article One
+  </h3>
+	<div>
+	 <p>		This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.
+	 </p>
+	 <p>		This is the content of article two.This is the content of article two.
+	 </p>
+	 <p>		This is the content of article two.This is the content of article two.This is the content of article two.This is the content of article two.
+	 </p>	
+	</div>
+  </body>
 </html>
