--- a/ui/article1.html
+++ b/ui/article1.html
@@ -3,6 +3,14 @@
 	<title>
 		Article One
 	</title>
+	<style>
+	  .c1{
+	        max-width: 800px;
+		margin: 0 auto;
+		color: grey;
+		font-family: sans-serif;
+	     }
+	</style>
   </head>
   <body>
 	<div>
