--- a/ui/article1.html
+++ b/ui/article1.html
@@ -17,9 +17,10 @@
 		<a href="/">Home</a>
 	</div>
 	<hr/>
-  <h3>Article One
-  </h3>
-	<div>
+	<div class=c1
+  	 <h1>Article One
+  	 </h1>
+	
 	 <p>		This is the content of article one.This is the content of article one.This is the content of article one.This is the content of article one.
 	 </p>
 	 <p>		This is the content of article one.This is the content of article one.This is the content of article one.This is the content of article one.
