--- a/ui/article1.html
+++ b/ui/article1.html
@@ -3,23 +3,18 @@
 	<title>
 		Article One
 	</title>
-	<style>
-	  .c1{
-	        max-width: 800px;
-		margin: 0 auto;
-		color: grey;
-		font-family: sans-serif;
-	     }
-	</style>
+	<link href="/ui/style.css" rel="stylesheet" />
   </head>
   <body>
-	<div>
+	<div class="bold">
 		<a href="/">Home</a>
 	</div>
 	<hr/>
-	<div class=c1
-  	 <h1>Article One
+	<div class=c1>
+  	<div class="text-big"> 
+	<h1>Article One
   	 </h1>
+	</div>
 	
 	 <p>		This is the content of article one.This is the content of article one.This is the content of article one.This is the content of article one.
 	 </p>
