--- a/ui/index.html
+++ b/ui/index.html
@@ -8,10 +8,12 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <hr/>
-        <div class="center text-big bold">
+        <div class="center ,text-big ,bold">
             <h4>Index File</h4>
         </div>
+	<div class="c1">
  	 <p>This is the index of my first webapp</p>  
+	</div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
