--- a/ui/index.html
+++ b/ui/index.html
@@ -8,8 +8,8 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <hr/>
-        <div class="center ,text-big ,bold">
-            <h4>Index File</h4>
+        <div class="center text-big bold">
+            <h1>Index File</h1>
         </div>
 	<div class="c1">
  	 <p>This is the index of my first webapp</p>  
