--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,9 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <hr/>
+        <script>
+        alert('welcome')
+        </script>
         <div class="center text-big bold">
             <h1>Index File</h1>
         </div>
