[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,9 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <hr/>
-        <script>
-        alert('welcome')
-        </script>
+        <script src='/main.js'></script>
         <div class="center text-big bold">
             <h1>Index File</h1>
         </div>
