--- a/ui/index.html
+++ b/ui/index.html
@@ -5,15 +5,16 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img id=logo src="http://wapkaimage.com/100045/100045601_8e36c70ca0.png" class="img-medium"/>
         </div>
         <hr/>
         <script src='/main.js'></script>
         <div class="center text-big bold">
-            <h1>Index File</h1>
+            <h1>Profile</h1>
         </div>
 	<div class="c1">
- 	 <p>This is the index of my first webapp</p>  
+ 	 <p>Name: Nafih<br/>Profession: Student</p>  
+ 	 <hr/>
 	</div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
