[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id=logo src="http://wapkaimage.com/100045/100045601_8e36c70ca0.png" class="img-medium"/>
+            <img id="logo" src="http://wapkaimage.com/100045/100045601_8e36c70ca0.png" class="img-medium"/>
         </div>
         <hr/>
         <script src='/main.js'></script>
