[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img id="logo" src="http://wapkaimage.com/100045/100045601_8e36c70ca0.png" class="img-medium"/>
         </div>
         <hr/>
-        <script src='/main.js'></script>
+        <script src='/ui/main.js'></script>
         <div class="center text-big bold">
             <h1>Profile</h1>
         </div>
