[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,8 @@
  	 <p>Name: Nafih<br/>Profession: Student</p>  
  	 <hr/>
 	</div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
+        <br/>
+        <button id='count'>Buttton</button><br/>
+        Clicked= 0 Times
     </body>
 </html>
