[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
  	 <hr/>
 	</div>
         <br/>
-        <button id='count'>Buttton</button><br/>
+        <button id="count">Buttton</button><br/>
         Clicked= 0 Times
     </body>
 </html>
