[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,6 +18,6 @@
 	</div>
         <br/>
         <button id="count">Buttton</button><br/>
-        Clicked= 0 Times
+        Clicked = <span id="counter"> 0 </span>Times
     </body>
 </html>
