[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
  	 <hr/>
 	</div>
         <br/>
-        <button id="count">Buttton</button><br/>
-        Clicked = <span id="counter"> 0 </span>Times
+        <button id="counter">Buttton</button><br/>
+        Clicked = <span id="count"> 0 </span>Times
     </body>
 </html>
