[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,5 +19,11 @@
         <br/>
         <button id="counter">Buttton</button><br/>
         Clicked = <span id="count"> 0 </span>Times
+        
+        <hr/>
+<input type="text" id="name" placeholder="Name"></input>
+<input type="submit" id="sbmt" value="Ok"></input>
+<ul id="namelst"></ul>
+
     </body>
 </html>
