[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
         <hr/>
 <input type="text" id="name" placeholder="Name"></input>
 <input type="submit" id="sbmt" value="Ok"></input>
-<ul id="namelst"></ul>
+<ul id="namelst">N          </ul>
 
     </body>
 </html>
