[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <link rel='shortcut icon' href='http://icons.veryicon.com/ico/System/Multipurpose%20Alphabet/Letter%20H%20black.ico' type='image/x-icon'/>
     </head>
     <body>
         <div class="center">
