[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,14 +6,14 @@
     	<title>   HckersWorkshop</title>
     	
     	<!-- CSS  -->
-        <link href="style.css" rel="stylesheet" />
+        <link href="ui/style.css" rel="stylesheet" />
         <link rel='shortcut icon' href='http://icons.veryicon.com/ico/System/Multipurpose%20Alphabet/Letter%20H%20black.ico' type='image/x-icon'/>
         <link href="https://fonts.googleapis.com/css?family=Anton|Lobster|Roboto+Slab" rel="stylesheet"> 
 	</head>
 	
     <body>
         <nav class="light-blue lighten-1" role="navigation">
-		  <div class="nav-wrapper container"><a id="logo-container" href="/index.html" class="brand-logofont-effect-outline " style="font-family: 'anton', serif;">HACKERSWORKSHOP</a>
+		  <div class="nav-wrapper container"><a id="logo-container" href="ui/index.html" class="brand-logofont-effect-outline " style="font-family: 'anton', serif;">HACKERSWORKSHOP</a>
         <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
         <li><a href="/tech.html">Technology</a></li>
